--- a/css/style.css
+++ b/css/style.css
@@ -95,4 +95,16 @@ img{
         margin-top: 100px;
     
     }
+    img{
+        width: 300px;
+    }
+    .logo{
+        width: 300px;
+        height: 300px;
+    }
+
+    p{
+        margin-top: 300px;
+    }
 }
+
